<resources>
    <string name="app_name">Samyojane_NK5</string>
    <string name="select_lan">Please Select Language:</string>
    <string name="versionCode">2.7.1</string>
    <string name="version">Ver : </string>
    <string name="release_date">Rele On : 21/09/2022</string>
    <string name="doc_address_proof">document for address proof</string>
    <string name="cre_district_name">District</string>
    <string name="cre_taluk_name">Taluk</string>
    <string name="cre_hobli_name">Hobli</string>
    <string name="cre_va_circle_name">VA_circle_ename</string>
    <string name="village_table_habitation_name">HM_habitation_ename</string>
    <string name="ward_table_ward_name">ENGLISHNAME</string>
    <string name="village_table_va_circle_name">VCM_va_circle_ename</string>
    <string name="facility_table_name">FM_facility_edesc</string>
    <string name="town_master_town_name">LTM_Town_eName</string>
    <string name="town_master_ward_name">LWM_Old_NK_WardeName</string>
    <string name="ser_tran_service_name">Service_Name</string>
    <string name="id_name">ID_Ename</string>
    <string name="reasons_tbl_reason_name">Reasons</string>
    <string name="reasons_tbl_purpose_name">Purpose</string>
    <string name="flag1">OPRRC</string>
    <string name="flag2">12345</string>
    <string name="flag1_ekshana">nadakacheriEMobileAPI@2020</string>
    <string name="flag2_ekshana">0bd8c0857ab17b225a7f14fa354fa3676</string>
    <string name="samyojane_api_flag1">nadakacheriSAMYOJANEAPI@2021</string>
    <string name="samyojane_api_flag2">0bd8c0857ab17b225a7f14fa354fa3757677</string>
    <string name="gender_username">fruits</string>
    <string name="gender_password">Fruits1122#</string>
    <string name="fieldVerify_api_flag1">SAMYOJUser</string>
    <string name="samyojane_API_url">https://testnk.karnataka.gov.in/Samyojane_API_test/api/values/</string>
    <string name="MobAPI_New_NIC">http://10.161.54.130/nkmobileAPI/api/FieldVerification/</string>
    <string name="SOAP_ADDRESS">http://164.100.133.47/NK_MobileApp/WebService.asmx</string>
    <string name="main_url_E_Kshana">http://164.100.133.47/NKMobileAPI/api/OPRC/</string>
    <string name="freeze_member_url">http://164.100.133.47/NKMobileAPI/api/OPRC/</string>
    <string name="inactive_member_url">http://164.100.133.47/NKMobileAPI/api/OPRC/</string>
    <string name="VA_Update_url">http://164.100.133.47/NKMobileAPI/api/OPRC/POSTUpdateRCMemberDetailsFromVA/</string>
    <string name="validate_ass_login_url">http://164.100.133.47/Mob_U_ekshana/e_kshana.asmx/ValidateAssistant</string>
    <string name="add_assistant_url">http://164.100.133.47/Mob_Rest_API/api/Values/</string>
    <string name="otp_generate_url">http://164.100.133.47/Mob_u_SMS/EKSHNA/</string>
    <string name="test_otp_url">http://192.168.0.139/RWS_MBEKSHNA/EKSHNA/</string>
    <string name="SMS_Text">You have initiated OTP for VA Assistant Registration, Your OTP is</string>
    <string name="SMS_Text_VA_RI">You have initiated OTP for SAMYOJANE App, Your OTP is</string>
    <string name="access_denied_msg">Access Denied!Please Contact Admin</string>
    <string-array name="language">
        <item>Kannada</item>
        <item>English</item>
    </string-array>
    <string-array name="years_array">
        <item>-- Select --</item>
        <item> &lt; 1 Year</item>
        <item> &gt; 5 Year</item>
        <item>Since Birth</item>
    </string-array>
    <string-array name="month_array">
        <item>-- Month --</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
    </string-array>
    <string-array name="to_array">
        <item>-- Select --</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>PUC</item>
        <item>Degree</item>
    </string-array>
    <string-array name="caste_array">
        <item>-- Select --</item>
        <item>SC</item>
        <item>ST</item>
        <item>General</item>
        <item>Minority</item>
    </string-array>
    <string-array name="Yes_No_array">
        <item>-- Select --</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="Reason_array">
        <item>-- Reason --</item>
        <item>Annual income more than limit</item>
        <item>Parents are Government servants</item>
        <item>Land more than prescribed limit</item>
    </string-array>
    <string-array name="Reason_array_kan">
        <item>-- ಕಾರಣ --</item>
        <item>ವಾರ್ಷಿಕ ಆದಾಯ ನಿಗದಿತ ಮಿತಿಗಿಂತ ಹೆಚ್ಚು</item>
        <item>ಪೋಷಕರರು ಸರ್ಕಾರಿ ನೌಕರರು</item>
        <item>ನಿಗದಿತ ಮಿತಿಗಿಂತ ಹೆಚ್ಚಿನ ಜಮೀನು</item>
    </string-array>
    <string-array name="RejectionReason">
        <item>-- Reason --</item>
        <item>Not resident at address so cannot verify</item>
        <item>Does not belongs to claimed caste</item>
        <item>Belongs to Creamy Layer</item>
    </string-array>
    <string-array name="Purpose_of_certificate">
        <item>-- Select --</item>
        <item>Education</item>
        <item>Employment</item>
        <item>Claim Status of Local Person</item>
        <item>Others</item>
    </string-array>
    <string-array name="Non_Exist_Reason">
        <item>-- Select --</item>
        <item>Delete from RationCard</item>
        <item>Expired or Dead</item>
        <item>Other</item>
    </string-array>
    <string-array name="spinnerDisability">
        <item>-- Select --</item>
        <item>In seeing</item>
        <item>In speech</item>
        <item>In hearing</item>
        <item>In movement</item>
        <item>Mentally Retarded</item>
    </string-array>
    <string name="simple_ime">Samyojane</string>
    <string name="subtype_kn_IN">Kannada (In)</string>
    <string name="todo">TODO</string>
    <string name="government_of_karnataka">Government of Karnataka</string>
    <string name="nadakacheri">NADAKACHERI</string>
    <string name="activate">Activate</string>
    <string name="activating">Activating…</string>
    <string name="enter_your_username">Enter the UserName</string>
    <string name="enter_the_password">Enter the Password</string>
    <string name="login">LogIn</string>
    <string name="login_c">LogIn…</string>
    <string name="village_accountant_module">Village Accountant Module</string>
    <string name="process_request">PROCESS REQUEST</string>
    <string name="revenue_inspector_module">Revenue Inspector Module</string>
    <string name="district">District</string>
    <string name="colon">:</string>
    <string name="taluk">Taluk</string>
    <string name="hobli">Hobli</string>
    <string name="va_circle">VA Circle</string>
    <string name="name">Name</string>
    <string name="village_accountant">Village Accountant</string>
    <string name="revenue_inspector">Revenue Inspector</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="download">Download</string>
    <string name="downloading">Downloading…</string>
    <string name="proceed">Proceed</string>
    <string name="pendency_report">Pendency Report</string>
    <string name="new_request">New Request</string>
    <string name="or">|</string>
    <string name="field_report">FIELD REPORT</string>
    <string name="service_wise_pending_status">Service wise Records</string>
    <string name="rural">RURAL</string>
    <string name="urban">URBAN</string>
    <string name="total_pending">Total Pending</string>
    <string name="village">Village</string>
    <string name="subvillage">Sub-Village</string>
    <string name="stayingFrom">Staying From</string>
    <string name="staying">Staying</string>
    <string name="stayingTo">Staying To</string>
    <string name="search_by_district">Search by District</string>
    <string name="search_by_taluk">Search by Taluk</string>
    <string name="search_by_rcNum">Search by RationCard No.</string>
    <string name="village_circle">Village Circle</string>
    <string name="search_by_village_circle">Search by Village Circle</string>
    <string name="search_by_village">Search by Village</string>
    <string name="town">Town</string>
    <string name="search_by_town">Search by Town</string>
    <string name="ward">Ward</string>
    <string name="search_by_ward">Search by Ward</string>
    <string name="sl">Sl.</string>
    <string name="service_name">Service Name</string>
    <string name="back">Back</string>
    <string name="applicant_name">Applicant Name</string>
    <string name="id">Id</string>
    <string name="due_date">Due Date</string>
    <string name="document_names">Document_Names</string>
    <string name="view">View</string>
    <string name="report">Report</string>
    <string name="village_circle_name">Village Circle Name</string>
    <string name="village_name">Village Name</string>
    <string name="village_circle_wise_pending_status">Village Circle wise</string>
    <string name="town_name">Town Name</string>
    <string name="town_wise_pending_status">Town wise</string>
    <string name="ward_wise_pending_status">Ward wise</string>
    <string name="village_wise_pending_status">Village wise</string>
    <string name="applicant_id">Applicant Id</string>
    <string name="indicates_overdue">Indicates Overdue</string>
    <string name="applicant_information">APPLICANT INFORMATION</string>
    <string name="editing_form">Editing Form</string>
    <string name="raised_location">Raised Location</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="father_husband">Father/Husband</string>
    <string name="enter_father_name">Enter Father/Husband Name</string>
    <string name="mother">Mother</string>
    <string name="enter_mother_name">Enter Mother Name</string>
    <string name="enter_father_husband_name">Enter Father/Husband Name</string>
    <string name="id_number">ID Number</string>
    <string name="enter_rationcard_no">Enter RationCard No.</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="enter_mobile_no">Enter Mobile No.</string>
    <string name="address">Address</string>
    <string name="enter_your_address">Enter Your Address</string>
    <string name="pin_code">PIN Code</string>
    <string name="enter_pin_code">Enter PIN Code</string>
    <string name="report_no">Report_No</string>
    <string name="aadhaar_details_optional">Aadhaar Details(Optional)</string>
    <string name="qr_code_scanner">QR Code Scanner</string>
    <string name="uid_no">UID No.</string>
    <string name="empty">NULL</string>
    <string name="or_text">OR</string>
    <string name="capture_naadhaar_card">Capture  Aadhaar Card</string>
    <string name="certified_correct_amp_proceed"><![CDATA[certified correct & proceed]]></string>
    <string name="updated_by">Updated by:</string>
    <string name="shri_smt">Shri/Smt</string>
    <string name="reason_for_rejection">Reason for rejection</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="can_caste_reservation_nbe_given">Can caste reservation \nbe given</string>
    <string name="can_agri_certificate_given">Can certificate \nbe given</string>
    <string name="whether_above_va_updated_ndetails_are_correct">Whether above VA updated \ndetails are correct</string>
    <string name="whether_the_applicating_updated_ndetails_are_correct">Whether the Applicant \nupdated details are \ncorrect</string>
    <string name="ri_recommendation">RI Recommendation</string>
    <string name="ward_name_num">Ward Name/Number</string>
    <string name="want_to_change_login_click_here_to">Want to change Login? Click Here to</string>
    <string name="change">Change</string>
</resources>