<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_new"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/taluk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/taluk"
            android:textSize="16sp"
            android:layout_marginStart="10dp"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textSize="16sp"
            android:layout_marginStart="10dp"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/hobli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hobli"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_marginStart="10dp" />

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_marginStart="10dp" />

        <TextView
            android:id="@+id/RI_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="16sp"
            android:layout_marginStart="10dp"
            android:textColor="@android:color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/tvServiceName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_name"
            android:textColor="#377691"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/ic_brightness_1_red_24dp"
            android:layout_gravity="center"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/indicates_overdue"
            android:textColor="@android:color/black"
            android:layout_gravity="center"
            android:layout_marginStart="5dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp">

        <TextView
            android:id="@+id/tv_V_T_Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@android:color/black"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvVillageName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/listLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fadingEdgeLength="0dp"
            android:fillViewport="true"
            android:overScrollMode="never"
            android:scrollbars="none"
            tools:ignore="UselessParent">

            <LinearLayout
                android:id="@+id/total_Applicants"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="ScrollViewSize">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:orientation="horizontal"
                    android:background="@drawable/panel_new">

                    <TextView
                        android:id="@+id/sl_No"
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/sl"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/app_Name1"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/applicant_name"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/app_Id"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:text="@string/applicant_id"
                        android:layout_marginStart="0dp"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        android:gravity="center"/>

                    <TextView
                        android:id="@+id/app_dueDate"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/due_date"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        android:layout_marginStart="5dp" />

                </LinearLayout>

                <ListView
                    android:id="@+id/list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:scrollbars="horizontal"
                    android:background="#FDF4B9"
                    android:divider="@android:color/darker_gray"
                    android:dividerHeight="1sp">
                </ListView>
                <TextView
                    android:id="@+id/emptyTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:background="@drawable/panel_new"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"/>

                <Button
                    android:id="@+id/btnBack"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:text="@string/back"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:background="@drawable/button_background"
                    android:layout_gravity="center"/>

            </LinearLayout>
        </HorizontalScrollView>

    </LinearLayout>
</LinearLayout>