<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/front_screen_background">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/karnataka"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/Department"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:ems="20"
        android:text="@string/government_of_karnataka"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/department_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="20"
        android:gravity="center"
        android:text="@string/nadakacheri"
        android:textColor="	#8B1C42"
        android:textSize="20sp"
        android:textStyle="bold" />

    <View
        android:layout_width="140dp"
        android:layout_height="1.5dp"
        android:background="@drawable/background_colors"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        tools:ignore="MissingConstraints"
        android:layout_gravity="center"/>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/fpage6"
        android:contentDescription="@string/todo" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="15sp"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/release_Date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/release_date"
                android:textSize="12sp"
                android:textColor="@android:color/black"
                android:layout_marginStart="5dp"/>

        </LinearLayout>

        <Button
            android:id="@+id/btnActivation"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:text="@string/activate"
            android:textColor="@android:color/black"
            android:background="@drawable/button_background"/>

        <TextView
            android:id="@+id/tvAlert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:ems="20"
            android:text=""
            android:textSize="14sp"
            android:textColor="@android:color/holo_red_light" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/userLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            tools:ignore="UselessParent">

            <EditText
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/enter_your_username"
                android:inputType="textPersonName"
                android:text=""
                android:textColor="@android:color/black"
                android:textColorHint="@color/grey"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textColorHint="@color/grey"
                android:hint="@string/enter_the_password"
                android:inputType="textPassword"
                android:textColor="@android:color/black"
                tools:ignore="Autofill"
                android:layout_weight="1"
                android:text=""/>

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/login"
                android:background="@drawable/button_background"
                android:textColor="@android:color/black" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/want_to_change_login_click_here_to"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btChangeLogin"
                    android:layout_width="100dp"
                    android:layout_height="20dp"
                    android:background="@drawable/button_background"
                    android:layout_gravity="center"
                    android:paddingRight="10dp"
                    android:paddingLeft="10dp"
                    android:textColor="@android:color/black"
                    android:text="@string/change" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</LinearLayout>