<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="#FDF4B9">

    <TextView
        android:id="@+id/sl_No"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/sl"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tvWardName"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/ward_name_num"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tvTotalPendency"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:text="@string/total_pending"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="70dp"
        android:layout_height="35dp"
        android:text="@string/view"
        android:background="@drawable/button_background"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvVillageCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvTownName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tvTownCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvWardCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:visibility="gone" />

</LinearLayout>

