<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="#FDF4B9">

    <TableLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        tools:ignore="UselessParent">
        <TableRow>
            <TextView
                android:id="@+id/tvSl_No"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/sl"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/tvAssName"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="@string/name"
                android:layout_weight="1"
                android:textColor="@android:color/black"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/tvAssMobileNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="@string/mobile_no"
                android:layout_weight="1"
                android:textColor="@android:color/black"
                android:layout_gravity="center"/>

        </TableRow>
    </TableLayout>
</LinearLayout>

