<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="#FDF4B9">

    <TextView
        android:id="@+id/sl_No"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/sl"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tvAppID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tvDocsID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <TextView
            android:id="@+id/tvDocsName"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text=""
            android:hint="@string/document_names"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <Button
        android:id="@+id/btnView"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:text="@string/view"
        android:background="@drawable/button_background"
        android:textColor="@android:color/black"
        android:textSize="16sp"/>

</LinearLayout>

